@@ -12,9 +12,9 @@ NAME:
 
 #include "lexer.h"
 
-extern word_t msg_addr;		/* First IP Address in Received: statement */
-extern word_t msg_id;		/* Message ID */
-extern word_t queue_id;		/* Message's first Queue ID */
+extern word_t *msg_addr;	/* First IP Address in Received: statement */
+extern word_t *msg_id;		/* Message ID */
+extern word_t *queue_id;	/* Message's first Queue ID */
 
 extern token_t get_token(word_t **token);
 
